--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Willkommen beim Deutschen Gedichtengenerator</h1>
+
+
+
+    <footer>This was coded by <a href="https://github.com/inksp0ts09">Maryanne McGlone</a> and is <a href="https://github.com/inksp0ts09/deutscher-gedichtgenerator" target="_blank">open sourced on GitHub</a></footer>
     <script src="src/index.js"></script>
 </body>
 </html>
