added basic html structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <title>KI Deutscher Gedichtengenerator</title>
 </head>
 <body>
-    <h1>Willkommen beim Deutschen Gedichtengenerator</h1>
-
+    <header>
+        <h1>KI Deutschen Gedichtengenerator</h1>
+    </header>
+    <main>
+        <form>
+            <input 
+            type="text" 
+            placeholder="Geben Sie das Thema des deutschen Gedichts ein"
+            autofocus
+            required 
+            />
+            <input type="submit" />
+        </form>
+        <div class="poem">
+            <p>Man wird niemals eine Sprache verstehen können</p>
+            <br />
+            <p>ohne eine zweite zu kennen --Geoffrey Willans</p>
+        </div>
+    </main>
 
 
     <footer>This was coded by <a href="https://github.com/inksp0ts09">Maryanne McGlone</a> and is <a href="https://github.com/inksp0ts09/deutscher-gedichtgenerator" target="_blank">open sourced on GitHub</a> and is hosted on <a href="https://deutscher-gedichtengenerator.netlify.app/">Netlify</a></footer>
