--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>KI Deutscher Gedichtengenerator</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>KI Deutschen Gedichtengenerator</h1>
     </header>
@@ -16,19 +17,20 @@
             type="text" 
             placeholder="Geben Sie das Thema des deutschen Gedichts ein"
             autofocus
-            required 
+            required
+            autocomplete="off"
+            class="instructions"
             />
-            <input type="submit" />
+            <input type="submit" class="submit-button" />
         </form>
         <div class="poem">
-            <p>Man wird niemals eine Sprache verstehen können</p>
+            Man wird niemals eine Sprache verstehen können
             <br />
-            <p>ohne eine zweite zu kennen --Geoffrey Willans</p>
+            ohne eine zweite zu kennen --Geoffrey Willans
         </div>
     </main>
-
-
     <footer>This was coded by <a href="https://github.com/inksp0ts09">Maryanne McGlone</a> and is <a href="https://github.com/inksp0ts09/deutscher-gedichtgenerator" target="_blank">open sourced on GitHub</a> and is hosted on <a href="https://deutscher-gedichtengenerator.netlify.app/">Netlify</a></footer>
+</div>
     <script src="src/index.js"></script>
 </body>
 </html>
