--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>KI Deutschen Gedichtengenerator</h1>
     </header>
     <main>
-        <form id="gedichtengenerator-form">
+        <form id="poem-generator-form">
             <input 
             type="text" 
-            placeholder="Geben Sie das Thema des deutschen Gedichts ein"
+            placeholder="Type a topic for a German Poem"
             autofocus
             required
             autocomplete="off"
@@ -26,7 +26,7 @@
             />
             <input type="submit" class="submit-button" />
         </form>
-        <div class="poem" id="gedicht"></div>
+        <div class="poem" id="poem"></div>
     </main>
     <footer>This was coded by <a href="https://github.com/inksp0ts09">Maryanne McGlone</a> and is <a href="https://github.com/inksp0ts09/deutscher-gedichtgenerator" target="_blank">open sourced on GitHub</a> and is hosted on <a href="https://deutscher-gedichtengenerator.netlify.app/">Netlify</a></footer>
 </div>
