--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>KI Deutschen Gedichtengenerator</h1>
     </header>
     <main>
+        <div class="form-container">
         <form id="poem-generator-form">
             <input 
             type="text" 
@@ -26,8 +27,11 @@
             />
             <input type="submit" class="submit-button" />
         </form>
-        <div class="poem" id="poem"></div>
+        <div class="hint">i.e.: Love, Berlin, or Spring</div>
+        </div>
+        <div class="poem hidden" id="poem"></div>
     </main>
+
     <footer>This was coded by <a href="https://github.com/inksp0ts09">Maryanne McGlone</a> and is <a href="https://github.com/inksp0ts09/deutscher-gedichtgenerator" target="_blank">open sourced on GitHub</a> and is hosted on <a href="https://deutscher-gedichtengenerator.netlify.app/">Netlify</a></footer>
 </div>
     <script src="src/index.js"></script>
